# SpaceInvaders

./: Ben Townshend - CGP2012M Assignment 1 - 13480634.docx  CMakeLists.txt  auto.sh  build.bat  conanfile.txt
src/: main.cpp
src/assets/: alien.pyxel  asteroids.pyxel  background.pyxel  barricade.pyxel  bullet.pyxel  player.pyxel
src/headers/: GameObject.h  GameState.h  Globals.h  Shaders.h  Vector3.h
src/headers/ObjectTypes/: Alien.h  Barricade.h  EnemyBullet.h  Plane.h  Player.h  PlayerBullet.h
